1.5.x:
    Added virtual fact

    Modified the operatingsystem fact for Debian so it looks in
    /etc/debian_version instead of /proc/version.

    Fixes #1467 - macaddress not set on Ubuntu

1.5.0:
    Fixed Rakefile to include additional files including tests et al

    Fixed #1400 - OperatingSystemRelease should now work on CentOS

    Changed 'timeout' option to 'limit' to avoid scope issue

    Fixes #1376 - Display memory facts for AIX

    Fixes #1334 - Forced Facter to use LANG=C

    Fixes #1357 - Change ps syntax for OSX and BSD

    Set the timeout on the AIX kernelrelease fact to 5 seconds.

    Refactored so each fact resolution can specify a separate timeout,
    but the default is still 0.5.

    Refactered ipmess.rb and util/ip.rb to support separate *BSD logic for
    *BSD aliased interfaces.

    Updated dmidecode facts fixing ticket #60

    Added AIX support for some facts

    Add lsbmajdistrelease fact for CentOS and Red Hat

    Updated Red Hat spec file for new version 
    The 'facter' executable now has an option (-p|--puppet) for loading the
    Puppet libraries, which gives it access to Puppet's facts.

    Added autoloading to Facter with a default of not loading all facts,
    which results in a significant speedup when only one fact is sought.
    Facts are autoloaded in either a single file named after the fact or
    in any file in a directory named after the fact.

    Significantly refactored Facter's internals, including creating tests
    for all internal classes.

    A netmask fact has been added closing ticket #46.  It only returns the 
    netmask of the primary interface (in the same behaviour as the ipaddress 
    and macaddress facts).

    Facts to return multiple interfaces on a host have also been updated.  
    If you have multiple interfaces on Linux, *BSD, or Solaris/SunOS you will 
    now get facts for each interface's IP address, MAC address and netmask.  
    The facts will be structured like: