@@ -1,0 +1,5 @@
+Facter.add("kernelversion") do
+  setcode do
+   Facter['kernelrelease'].value.split('-')[0]
+  end	
+end        
